--- a/dirtbikes.html
+++ b/dirtbikes.html
@@ -1,7 +1,7 @@
 # website 
 <body>
 <h1>cr500</h1>
-<img>images (7).jpg</img>
+<img src="redbike.jpg"></img>
 <ul>
 <li>2stroke</li>
 <li>500cc</li>
