--- a/dirtbikes.html
+++ b/dirtbikes.html
@@ -2,6 +2,7 @@
 <body>
 <h1>cr500</h1>
 <img src="redbike.jpg"></img>
+<table>
 <ul>
 <li>2stroke</li>
 <li>500cc</li>
@@ -18,7 +19,7 @@
 <Li>4stroke</li>
 <li>450cc</li>
 <li>suzuki</li>
-<table>
+<body>
 
 
 
