added rest of pictures

--- a/dirtbikes helmets.html
+++ b/dirtbikes helmets.html
@@ -2,22 +2,24 @@
 <body>
 <h1>cr500</h1>
 <img src="redbike.jpg"></img>
+<table>
 <ul>
 <li>2stroke</li>
 <li>500cc</li>
 <li>honda</li>
 <ul>
 <h2>YZ450</h2>
-<img src="bluebike.jpg"></img>
+<img>images (8).jpg</img>
 <li>4stroke</li>
 <li>450cc</li>
 <li>yamaha</li>
 <ul>
 <h3>RMz450</h3>
-<img src="yellowbike.jpg"></img>
+<img>images (9).jpg</img>
 <Li>4stroke</li>
 <li>450cc</li>
 <li>suzuki</li>
+<body>
 
 
 
